<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/baseline_arrow_back_24">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/font_regular"
                android:text="@string/new_story"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/iv_add_photo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180dp"
        android:layout_margin="@dimen/_20dp"
        android:contentDescription="@string/placeholder"
        android:src="@drawable/baseline_image_24"
        app:circularflow_defaultRadius="@dimen/_8dp"
        app:circularflow_radiusInDP="8dp"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:riv_corner_radius="8dp" />

    <Button
        android:id="@+id/bt_pick_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8dp"
        app:layout_constraintTop_toBottomOf="@id/iv_add_photo"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        android:text="@string/kamera"
        android:layout_marginTop="@dimen/_16dp"
        android:backgroundTint="@color/primary"
        android:textColor="@android:color/white"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/bt_pick_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginStart="@dimen/_8dp"
        android:backgroundTint="@color/primary"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/iv_add_photo"
        android:textAllCaps="false"
        android:text="@string/galeri"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_desc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bt_pick_camera"
        android:layout_margin="@dimen/_16dp"
        app:endIconMode="clear_text"
       >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/font_regular"
            android:hint="@string/deskripsi"
            android:inputType="textMultiLine"
            android:lines="4"
            android:gravity="top"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/layout_desc"
        app:layout_constraintEnd_toEndOf="@id/layout_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_20dp"
        android:text="@string/upload"
        android:backgroundTint="@color/primary"
        android:textColor="@android:color/white"
        android:textAllCaps="false"/>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/primary"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/layout_desc"
        app:layout_constraintTop_toBottomOf="@id/layout_desc"
        android:layout_marginTop="@dimen/_16dp"
        style="@style/titleMedium12Black"
        android:text="@string/share_location_optional"
        />
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/layout_desc"
        app:layout_constraintTop_toTopOf="@id/tv_location"
        app:layout_constraintBottom_toBottomOf="@id/tv_location"
         />




</androidx.constraintlayout.widget.ConstraintLayout>