<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/font_regular"
                android:text="@string/detail_story"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/iv_detail_photo"
        android:layout_width="match_parent"
        app:circularflow_radiusInDP="8dp"
        android:src="@drawable/placeholder"
        app:circularflow_defaultRadius="@dimen/_8dp"
        app:riv_corner_radius="8dp"
        android:scaleType="fitXY"
        android:layout_height="@dimen/_200dp"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        android:layout_margin="@dimen/_20dp"
        android:transitionName="image"
        android:contentDescription="@string/detail_story"/>

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_detail_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_16dp"
        android:transitionName="title"
        style="@style/titleBold16Black"
        android:text="@string/example_name"/>

    <TextView
        android:id="@+id/tv_detail_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/_16dp"
        android:transitionName="description"
        android:text="@string/example_description"
        style="@style/titleMedium14Black"
        />




</androidx.constraintlayout.widget.ConstraintLayout>