<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light">

    <ImageView
        android:id="@+id/img"
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_120dp"
        android:layout_marginTop="@dimen/_20dp"
        android:src="@drawable/icon_story"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/container_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <LinearLayout
        android:id="@+id/container_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:layout_marginTop="@dimen/_80dp"
        android:background="@drawable/bg_input"
        android:backgroundTint="@android:color/white"
        android:orientation="vertical"
        android:padding="@dimen/_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/titleBold20Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masukkan_data_diri_anda" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_16dp"
            android:outlineAmbientShadowColor="@color/primary"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/baseline_drive_file_rename_outline_24"
            app:startIconTint="@color/primary">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_register_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/font_regular"
                android:hint="@string/nama_lengkap"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_16dp"
            android:outlineAmbientShadowColor="@color/primary"
            app:endIconMode="clear_text"

            app:startIconDrawable="@drawable/baseline_email_24"
            app:startIconTint="@color/primary">
            <com.fadhil.myfadhilstoryapp.tools.CustomEditText
                android:id="@+id/ed_register_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/font_regular"
                android:hint="Email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_16dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/baseline_key_24"
            app:startIconTint="@color/primary">

            <com.fadhil.myfadhilstoryapp.tools.CustomEditText
                android:id="@+id/ed_register_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/font_regular"
                android:hint="Password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@drawable/bg_input"
            android:backgroundTint="@color/primary"
            android:drawablePadding="@dimen/_8dp"
            android:fontFamily="@font/font_bold"
            android:paddingHorizontal="@dimen/_12dp"
            android:paddingVertical="@dimen/_8dp"
            android:text="@string/daftar"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/primary"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>
